@@ -1,3 +1,6 @@
+2017-09-15 Werner S Freund
+  * Important bugfix in traverse
+
 2017-09-01 Werner S Freund
   * Set git to ignore changes in Makefile.RootCore to allow tags to appear
 clean even when there are changes in MakeFile.RootCore
